2010-07-20  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-autotools-utils):
	Add new autotools-utils.eclass

2010-07-19  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-versionator): Add
	version_format_string() function

2010-07-13  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-qt4-build): Add
	qt_assistant_cleanup() and qt_nolibx11() functions
	(ebuild-mode-keywords-xorg-2): Remove cleanup_fonts() function
	(ebuild-mode-keywords-python): Remove validate_PYTHON_ABIS() as it is an
	internal function, rename python_clean_sitedir() to
	python_clean_installation_image()
	(ebuild-mode-keywords-kde4-base): Add get_build_type() function
	(ebuild-mode-keywords-perl-helper): Add support for new
	perl-helper.eclass
	(ebuild-mode-keywords-perl-module): Remove perl-module.eclass as
	no functions are needed anymore

2010-07-09  Ulrich Mueller  <ulm@gentoo.org>

	* Version 1.17 released.

2010-04-26  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-ruby-ng):
	Add ruby_rbconfig_value() function

2010-04-22  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-toolchain-funcs):
	Add tc-is-hardfloat()

2010-04-20  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-font):
	Add fonts.eclass

2010-04-07  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-ruby-ng):
	Add ruby_get_version() and ruby_get_implementation()
	(ebuild-mode-keywords-flag-o-matic): Add append-libs()

2010-03-29  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-qt3):
	Remove entire deprecated block
	(ebuild-mode-xfconf): Import new eclass

2010-03-22  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python):