@@ -1,3 +1,8 @@
+2010-08-09  Christian Faulhammer  <fauli@gentoo.org>
+
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-haskell-cabal):
+	Add haskell-cabal.eclass
+
 2010-07-20  Christian Faulhammer  <fauli@gentoo.org>
 
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-autotools-utils):
